gobmkida/c0/pattern_2_string
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1568:25: error: unknown type name 'pattern_0'
void  pattern_2_string( pattern_0 *pat, struct patval_b *elements, char *str, int trans, int ci, int cj) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1605:1: error: use of undeclared identifier 'pattern_0'
pattern_0 *pata; // [rsp+1BF8h] [rbp-8h] 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1605:12: error: use of undeclared identifier 'pata'
pattern_0 *pata; // [rsp+1BF8h] [rbp-8h] 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1607:1: error: use of undeclared identifier 'pata'; did you mean 'pat'?
pata = pat; 
^~~~
pat
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1568:36: note: 'pat' declared here
void  pattern_2_string( pattern_0 *pat, struct patval_b *elements, char *str, int trans, int ci, int cj) 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1630:16: error: use of undeclared identifier 'pata'
for ( ia = m + pata->mini; ia != m + pata->maxi + 1; ++ia ) 
               ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1630:38: error: use of undeclared identifier 'pata'
for ( ia = m + pata->mini; ia != m + pata->maxi + 1; ++ia ) 
                                     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1632:16: error: use of undeclared identifier 'pata'
for ( ja = n + pata->minj; ja != n + pata->maxj + 1; ++ja ) 
               ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1632:38: error: use of undeclared identifier 'pata'
for ( ja = n + pata->minj; ja != n + pata->maxj + 1; ++ja ) 
                                     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1635:8: error: use of undeclared identifier 'pata'
if ( ( pata->edge_constraints & 2) != 0 ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1637:12: error: use of undeclared identifier 'pata'
for ( ib = pata->maxi + m + 1; ib != 63; ++ib ) 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1643:8: error: use of undeclared identifier 'pata'
if ( ( pata->edge_constraints & 4) != 0 ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1647:12: error: use of undeclared identifier 'pata'
for ( jc = pata->maxj + n + 1; jc != 63; ++jc ) 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1651:8: error: use of undeclared identifier 'pata'
if ( ( pata->edge_constraints & 1) != 0 ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1653:21: error: use of undeclared identifier 'pata'
for ( id = 0; id != pata->mini + m; ++id ) 
                    ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1659:8: error: use of undeclared identifier 'pata'
if ( ( pata->edge_constraints & 8) != 0 ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1661:21: error: use of undeclared identifier 'pata'
for ( ie = 0; ie != pata->maxi + m + 1; ++ie ) 
                    ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1663:21: error: use of undeclared identifier 'pata'
for ( je = 0; je != pata->minj + n; ++je ) 
                    ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1666:8: error: use of undeclared identifier 'pata'
if ( ( pata->edge_constraints & 2) == 0 ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1668:12: error: use of undeclared identifier 'pata'
for ( ig = pata->maxi + m + 1; ig != 63; ++ig ) 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1670:21: error: use of undeclared identifier 'pata'
for ( jf = 0; jf != pata->minj + n; ++jf ) 
                    ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1690:19: error: use of undeclared identifier 'pata'
for ( k = 0; k != pata->patlen; ++k ) 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1715:11: error: use of undeclared identifier 'pata'
to_test = pata->patlen; 
          ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1716:9: error: use of undeclared identifier 'pata'
edges = pata->edge_constraints; 
        ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1740:12: error: use of undeclared identifier 'pata'
if ( ij == pata->maxi ) 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1742:12: error: use of undeclared identifier 'pata'
if ( ij == pata->mini ) 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1744:12: error: use of undeclared identifier 'pata'
if ( ji == pata->maxj ) 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1746:12: error: use of undeclared identifier 'pata'
if ( ji == pata->minj ) 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1765:11: error: use of undeclared identifier 'pata'
if ( ij > pata->maxi ) 
          ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1767:11: error: use of undeclared identifier 'pata'
if ( ij < pata->mini ) 
          ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1769:11: error: use of undeclared identifier 'pata'
if ( ji > pata->maxj ) 
          ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/patterns/dfa.c:1771:11: error: use of undeclared identifier 'pata'
if ( ji < pata->minj ) 
          ^
31 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/pattern_2_string/src/obj/3/dfa.o] Error 1
